# compliance-checker

./: .gitignore  BUILD_PLAN.md  DECISIONS.md  README.md
regis/backend/: .coverage  .env.example  Dockerfile  alembic.ini  pyproject.toml
regis/backend/alembic/: env.py
regis/backend/alembic/versions/: 0001_baseline_schema.py  0002_rls_and_append_only_audit.py  0003_membership_bootstrap_policy.py
regis/backend/app/: __init__.py  main.py
regis/backend/app/ai/: __init__.py  documents.py  legal.py  llm.py  ocr.py  rag.py
regis/backend/app/core/: __init__.py  audit.py  config.py  db.py  deps.py  security.py  storage.py
regis/backend/app/engines/: __init__.py  applicability.py  copilot.py  document_intelligence.py  instance_generator.py  profile_extraction.py
regis/backend/app/jobs/: __init__.py  worker.py
regis/backend/app/models/: __init__.py  base.py  calendar.py  compliance.py  content.py  evidence.py  legal_updates.py  profile.py  system.py  tenancy.py  types.py
regis/backend/app/modules/: __init__.py
regis/backend/app/seed/: __init__.py  cli.py  library_loader.py  nbfc_obligation_library_seed.json
regis/backend/tests/: conftest.py
regis/backend/tests/golden/: test_applicability_golden.py  test_copilot_golden.py  test_document_intelligence_golden.py  test_instance_generator_golden.py  test_profile_extraction_golden.py
regis/backend/tests/integration/: conftest.py  test_api_smoke.py  test_audit_trail.py  test_evidence_lifecycle.py  test_legal_updates.py  test_notifications.py  test_persist_chain.py  test_postgres_hardening.py  test_reports.py  (+2 more)
(+81 files in other folders)
