[project]
name = "regis-backend"
version = "0.1.0"
description = "Regis — AI-native compliance platform for Indian NBFCs (Phase 1 backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "arq>=0.25",
    "redis>=5.0",
    "boto3>=1.34",
    "anthropic>=0.40",
    "httpx>=0.27",
    "reportlab>=4.0",            # production PDF engine (dependency-free fallback if absent)
    "cryptography>=42.0",        # field-level encryption (Fernet)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
# Make `import app...` work without installation, and keep golden tests first-class.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "golden: locked regression fixtures reproducing verified reference numbers",
    "db: requires a live Postgres (skipped if DATABASE_URL unset)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E741", "B008"]
